// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-OverlayDisclosure"
  role="button"
  tabindex="0"
>
  Toggle
</div>
`;

exports[`composition hook should return with Overlay.Disclosure props 1`] = `
Object {
  "aria-controls": "test",
  "aria-expanded": false,
  "aria-haspopup": "dialog",
  "className": "css-1fie8gx css-63it0p css-jwhr8m bb-Box bb-ModalDisclosure bb-OverlayDisclosure",
  "onClick": [Function],
  "onClickCapture": [Function],
  "onKeyDown": [Function],
  "onKeyPressCapture": [Function],
  "onKeyUp": [Function],
  "onMouseDown": [Function],
  "onMouseDownCapture": [Function],
  "ref": [Function],
  "type": "button",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-OverlayDisclosure"
  role="button"
  tabindex="0"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 red bb-Box bb-ModalDisclosure bb-OverlayDisclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`overrides Overlay.Disclosure.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ModalDisclosure bb-OverlayDisclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`props should assign a ref 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-OverlayDisclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-OverlayDisclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly when disabled is set 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-disabled="true"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-OverlayDisclosure"
  disabled=""
  style="pointer-events: none;"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly when focusable is set 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-disabled="true"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalDisclosure bb-OverlayDisclosure"
  style="pointer-events: none;"
  type="button"
>
  Toggle
</button>
`;

exports[`theming Overlay.Disclosure.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<button
  aria-controls="test"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ModalDisclosure bb-OverlayDisclosure"
  type="button"
>
  Toggle
</button>
`;
